k8s/zigbee2mqtt/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt-deploy
  namespace: zigbee2mqtt
spec:
  selector:
    matchLabels:
      app: zigbee2mqtt
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      nodeSelector:
        kubernetes.io/hostname: s1.sm-nodes.zefirscloud.local
      volumes:
        - name: zigbee2mqtt-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-pvc
        - name: dongle
          hostPath:
            path: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:latest
          volumeMounts:
            - name: zigbee2mqtt-data
              mountPath: /app/data
            - name: dongle
              mountPath: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
          securityContext:
            privileged: true
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
